cherry picking from main into 8.1 for specific bug fixes

--- a/src/content/iframe.css
+++ b/src/content/iframe.css
@@ -42,9 +42,7 @@ h2 {
   margin-top: 1.5em;
 }
 
-h1 span,
-h2 span,
-h3 span {
+:is(h1, h2, h3, h4) span {
   color: var(--dim);
   font-size: 0.8em;
   font-style: italic;
@@ -62,7 +60,7 @@ p {
 }
 
 pre {
-  border-left: 2px solid #ccc;
+  border-left: 3px solid #ccc;
   padding: 0.5em 1em;
 }
 
@@ -153,6 +151,11 @@ li span {
   font-size: 0.9em;
 }
 
+mark {
+  color: var(--header);
+  background-color: unset;
+}
+
 /* ----- About ----- */
 .about dt {
   background-color: unset;
@@ -208,49 +211,36 @@ caption {
   padding: 0.5em;
 }
 
+tr:nth-child(2n) {
+  background-color: var(--alt-bg);
+}
+
 th,
 td {
   border: 1px solid var(--border);
   vertical-align: top;
 }
 
-th {
-  background-color: var(--alt-bg);
-  text-align: left;
-  padding: 0.5em;
-}
-
-/* th span {
-  display: block;
-  font-size: 0.9em;
-  font-weight: normal;
-  font-style: italic;
-} */
-
 td {
   padding: 0.5em;
 }
 
-thead td {
+thead th {
   font-size: 1.2em;
-  text-align: center;
+  padding: 0.5em;
 }
 
 tbody th {
-  font-weight: normal;
   min-width: 10em;
 }
 
+td pre,
 .code td,
 td.code {
   font-family: monospace;
   font-size: 1.2em;
 }
 
-mark {
-  color: var(--header);
-  background-color: unset;
-}
 /* ----- /Table ----- */
 
 /* ----- note, footnote, warning, experimental ----- */
