--- a/src/content/spinner.css
+++ b/src/content/spinner.css
@@ -11,7 +11,6 @@ div.spinner {
   position: fixed;
   top: 0;
   left: 0;
-  opacity: 0;
   z-index: 1;
   transition: all 0.5s ease-in-out;
 }
@@ -40,10 +39,15 @@ div.spinner {
 
 .spinner.on {
   display: grid;
-  opacity: 1;
+  animation: fade-in 0.5s ease-in-out;
 }
 
 @keyframes spin {
-  0% { transform: rotate(0deg); }
+  0%   { transform: rotate(0deg); }
   100% { transform: rotate(360deg); }
+}
+
+@keyframes fade-in {
+  0%   { opacity: 0; }
+  100% { opacity: 1; }
 }
