--- a/src/content/default.css
+++ b/src/content/default.css
@@ -102,7 +102,8 @@ button:hover {
   background: var(--btn-hover);
 }
 
-button:disabled {
+button:disabled,
+select:disabled {
   cursor: not-allowed;
   opacity: 0.4;
 }
