--- a/src/content/popup.css
+++ b/src/content/popup.css
@@ -157,25 +157,25 @@ div.host select {
   grid-column: span 2;
 }
 
-/* ----- hide/show elements ----- */
+/* ----- show/hide elements ----- */
 
 /* --- Chrome --- */
-section.chrome .firefox {
+.chrome .firefox {
   opacity: 0.3;
   pointer-events: none;
   user-select: none;
 }
 
 /* ---managed --- */
-section.managed .local {
+.managed .local {
   opacity: 0.3;
   pointer-events: none;
   user-select: none;
 }
 
 /* --- Basic --- */
-section.basic .pattern {
+.basic .pattern {
   display: none;
 }
 
-/* ----- /hide/show elements ----- */
+/* ----- /show/hide elements ----- */
